--- a/package.json
+++ b/package.json
@@ -5,25 +5,23 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "next": "^12.1.0",
     "quickchart-js": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-charts": "^4.0.0",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "sharp": "^0.30.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "test": "next build &  next start"
   },
   "eslintConfig": {
     "extends": [
@@ -44,7 +42,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "google-charts": "^2.0.0",
-    "tailwindcss": "^3.0.18"
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
