--- a/package.json
+++ b/package.json
@@ -23,13 +23,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "next build &  next start"
+    "test": "next build &  next start",
+    "lint": "next lint"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "next"
   },
   "browserslist": {
     "production": [
@@ -45,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.10.0",
     "google-charts": "^2.0.0",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23"
