--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
-    "sharp": "^0.30.2"
+    "sharp": "^0.30.2",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "dev": "next dev",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.10.0",
     "google-charts": "^2.0.0",
